--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -8,11 +8,12 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        #node-version: [16.x, 18.x, 20.x]
+        node-version: [16.x]
 
     steps:
     - uses: actions/checkout@v3
