updated action webpack.yml

--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -38,4 +38,4 @@ jobs:
         overwrite: true
         path: |
           tabledump.tableplusplugin/
-          !node_modules/**
+          !**/node_modules/**
