--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -31,6 +31,7 @@ jobs:
         npm install
         npm run build
 
+    # ref: https://github.com/marketplace/actions/upload-a-build-artifact#zip-archives
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
