added Pydantic Schema

--- a/tabledump.tableplusplugin/manifest.json
+++ b/tabledump.tableplusplugin/manifest.json
@@ -48,6 +48,12 @@
                     "script": "dumpcreation.js",
                     "handler": "sqlalchemy_pg",
                     "name": "SQLAlchemy(PG) Model"
+                },
+                {
+                    "type": "action",
+                    "script": "dumpcreation.js",
+                    "handler": "pydantic",
+                    "name": "Pydantic Schema"
                 }
             ]
         }
